<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright © 2013 Mike Beattie <mike@ethernal.org>

     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; version 2 of the License.

     This program is distributed in the hope that it will be useful, but
     WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
     General Public License for more details.

     You should have received a copy of the GNU General Public License along
     with this program; if not, write to the Free Software Foundation, Inc.,
     59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/map"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

	</LinearLayout>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="true"
		android:orientation="horizontal" >

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="5dp" >

			<TextView
				android:id="@+id/distance_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="4dp"
				android:text="@string/distance_label" />

			<TextView
				android:id="@+id/distance_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/distance_label"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="5dp" >

			<TextView
				android:id="@+id/bearing_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="4dp"
				android:text="@string/bearing_label" />

			<TextView
				android:id="@+id/bearing_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@+id/bearing_label"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>

	</LinearLayout>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="true"
		android:orientation="horizontal" >

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="5dp" >

			<TextView
				android:id="@+id/target_lat_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="4dp"
				android:text="@string/target_latitude_label" />

			<TextView
				android:id="@+id/target_lat_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/target_lat_label"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="5dp" >

			<TextView
				android:id="@+id/target_lon_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="4dp"
				android:text="@string/target_longitude_label" />

			<TextView
				android:id="@+id/target_lon_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/target_lon_label"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>
	</LinearLayout>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="true"
		android:orientation="horizontal" >

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="5dp" >

			<TextView
				android:id="@+id/receiver_lat_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="4dp"
				android:text="@string/receiver_latitude_label" />

			<TextView
				android:id="@+id/receiver_lat_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/receiver_lat_label"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:paddingTop="5dp" >

			<TextView
				android:id="@+id/receiver_lon_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="4dp"
				android:text="@string/receiver_longitude_label" />

			<TextView
				android:id="@+id/receiver_lon_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/receiver_lon_label"
				android:text=""
				android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>